# nexus-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.example  main.py  pyproject.toml  requirements.txt
docs/: grant-field-value-combinations.md  nexus.md
kmd_nexus_client/: __init__.py  client.py  hooks.py  manager.py  nexus_ai_safety_wrapper.py  tree_helpers.py  utils.py
kmd_nexus_client/functionality/: aktivitetslister.py  assignments.py  borgere.py  brugere.py  calendar.py  cases.py  citizens.py  forløb.py  grants.py  indsatser.py  kalender.py  medcom.py  medicin.py  opgaver.py  organisationer.py  organizations.py  skemaer.py  tilstande.py
nexus_client/: __init__.py  client.py
nexus_client/functionality/: citizens.py  organizations.py
tests/: assignments_client_test.py  calendar_client_test.py  cases_client_test.py  citizens_client_test.py  conftest.py  fixtures.py  grants_client_test.py  nexus_client_test.py  organizations_client_test.py  test_aktivitetslister.py  test_assignments_client.py  test_borgere.py  test_borgere_client.py  test_brugere.py  test_fill_grant_elements.py  test_forløb.py  test_grants_client.py  test_indsats.py  test_indsatser.py  test_kalender.py  test_manager.py  test_medcom.py  test_medicin.py  test_nexus_client.py  test_opgaver.py  test_organisationer.py  test_organisationer_client.py  test_organizations_client.py  test_skemaer.py  test_tilstande.py  test_tree_helpers.py
tests/fixtures/: grant-prototype.json
